Fix overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,5 +13,6 @@ body {
 
 .px32 {
     zoom: 10;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
